# alx-backend-python

./: .gitignore  main.py  pyproject.toml  ruff.toml
.github/workflows/: .env.ci  ci.yml  entrypoint.yml
.github/workflows/messaging_app/: ci.yml
0x03-Unittests_and_integration_tests/: test_client.py  test_utils.py
0x03-Unittests_and_integration_tests/utils/: __init__.py  get_json.py
Django-Middleware-0x03/: .env.test  .gitignore  docker-compose.tests.yaml  docker-compose.yaml  pyproject.toml  ruff.toml  settings.py
Django-Middleware-0x03/chats/: filters.py  middleware.py  models.py  permissions.py
Django-Middleware-0x03/chats/migrations/: 0001_initial.py
Django-Middleware-0x03/chats/tests/: conftest.py  test_middleware.py  test_middleware_authenticated.py  test_middleware_parametrized.py
Django-Middleware-0x03/messaging_app/: settings.py
Django-signals_orm-0x04/: .env.example  .gitignore  README.md  docker-compose.tests.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
Django-signals_orm-0x04/chats/: auth.py  middleware.py  models.py  pagination.py  views.py
Django-signals_orm-0x04/messaging/: admin.py  apps.py  managers.py  models.py  signals.py  tests.py  urls.py  views.py
Django-signals_orm-0x04/messaging_app/: settings.py  urls.py
messaging_app/: .gitignore  Dockerfile  Dockerfile.jenkins  Dockerfile.test  README.md  blue_deployment.yaml  docker-compose.yml  ingress.yaml  kubctl-0x02  kubctl-0x03  kubeservice.yaml  kurbeScript  pyproject.toml  requirements.txt
messaging_app/chats/: auth.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
messaging_app/chats/migrations/: 0001_initial.py
messaging_app/messaging_app/: Dockerfile  Jenkinsfile  blue_deployment.yaml  deployment.yaml  docker-compose-jenkins.yaml  green_deployment.yaml  kubctl-0x01  post_man_Collections  settings.py  urls.py
messaging_app/messaging_app/.github/workflows/: ci.yml  dep.yml
messaging_app/messaging_app/tests/: test_sanity.py
messaging_app/users/: models.py
messaging_app/users/migrations/: 0001_initial.py
python-context-async-perations-0x02/: 0-databaseconnection.py  1-execute.py  3-concurrent.py
python-decorators-0x01/: 0-log_queries.py  1-with_db_connection.py  2-transactional.py  3-retry_on_failure.py  4-cache_query.py  seed.py
python-generators-0x00/: 0-main.py  0-stream_users.py  1-batch_processing.py  1-main.py  2-lazy_paginate.py  2-main.py  3-main.py  4-stream_ages.py  README.md  docker-compose.yml  seed.py  sql_credentials.py
(+8 files in other folders)
