[project]
name = "alx-backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "mysql-connector-python>=9.5.0",
    "parameterized>=0.9.0",
    "pycodestyle>=2.14.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.5",
]
