[project]
name = "alx-backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "mysql-connector-python>=9.5.0",
    "parameterized>=0.9.0",
    "pycodestyle>=2.14.0",
    "pydoclint>=0.8.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.5",
]
[tool.pydoclint]
style = "google"
require-return-section-when-returning-nothing = false
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false
check-class-attributes = false
